--- a/package.json
+++ b/package.json
@@ -8,8 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "bootstrap": "^4.5.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "es6-promise": "^4.2.8",
+    "jquery": "^3.5.1",
+    "masonry-layout": "^4.2.2",
+    "popper.js": "^1.16.1",
+    "vue": "^2.6.11",
+    "vue-images-loaded": "^1.1.2",
+    "vue-jwt-decode": "^0.1.0",
+    "vue-masonry": "^0.11.8",
+    "vue-masonry-wall": "^0.2.5",
+    "vue-router": "^3.1.6",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -18,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "json-server-auth": "^1.2.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
